--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -7,10 +7,13 @@
 <ion-header>
 
   <ion-navbar color="dark">
-    <button ion-button menuToggle color="danger">
+    
+
+    <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Contacto Pizzeria</ion-title>
+    <ion-title>Contact</ion-title>
+
   </ion-navbar>
 
 </ion-header>
