--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,43 @@
 <ion-header>
-  <ion-navbar color="dark">
-    <button ion-button menuToggle color="danger">
+  <ion-navbar>
+    <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Pizzeria</ion-title>
+    <ion-title>Inicio</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h3>HTTP 404</h3>
+<ion-content>
+  <h3>Las mejores pizzas de GDL</h3>
+  <ion-card *ngIf="dish">
+    <img src="{{'http://localhost:3000/'+ dish.image}}" />
+    <ion-card-content>
+      <ion-card-title>
+        {{dish.name | uppercase}}
+</ion-card-title>
+<p>
+  {{dish.description}}
+</p>
+    </ion-card-content>
+  </ion-card>
 
-  <p>
-    Nill
-  </p>
+  
+  <ion-card *ngIf="leader">
+    <img src="{{'http://localhost:3000/'+ leader.image}}" />
+    <ion-card-content>
+      <ion-card-title>
+        {{leader.name | uppercase}}
+</ion-card-title>
+<p>
+  {{leader.description}}
+</p>
+    </ion-card-content>
+  </ion-card>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
 </ion-content>
+
+
+
+
+
+
