--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -6,16 +6,28 @@
 -->
 <ion-header>
 
-  <ion-navbar color="dark">
-    <button ion-button menuToggle color="danger">
+  <ion-navbar>
+    <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Menu Pizzeria</ion-title>
+    <ion-title>Menu</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+	<ion-card *ngFor="let dish of dishes">
+    <img src="{{'http://localhost:3000/'+ dish.image}}" />
+    <ion-card-content>
+      <ion-card-title>
+        {{dish.name | uppercase}}
+</ion-card-title>
+<p>
+  {{dish.description}}
+</p>
+    </ion-card-content>
+  </ion-card>
 
 </ion-content>
