--- a/src/pages/dishdetail/dishdetail.html
+++ b/src/pages/dishdetail/dishdetail.html
@@ -7,12 +7,33 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>dishdetail</ion-title>
+    <ion-title> {{dish.name | uppercase}}</ion-title>
+    
+
   </ion-navbar>
 
 </ion-header>
 
 
+  
 <ion-content padding>
+<ion-card *ngIf="dish">
+    <img src="{{'http://localhost:3000/'+ dish.image}}" />
+    <ion-card-content>
+      <ion-card-title>
+        {{dish.name | uppercase}}
+</ion-card-title>
+<p>
+  {{dish.description}}
+</p>
+    </ion-card-content>
+  </ion-card>
+  <ion-list *ngIf="dish" color="theme_color">
+  	<ion-list-header>
+  		<h2>Commnets</h2>
+  	</ion-list-header>
+  	<ion-item *ngFor="let comment of dish.comments" color="background_color">
+  	</ion-item>
+  </ion-list>
 
 </ion-content>
