--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -18,8 +18,9 @@
 
 <ion-content padding>
 
-	<ion-card *ngFor="let dish of dishes">
-    <img src="{{'http://localhost:3000/'+ dish.image}}" />
+
+	<ion-card *ngFor="let dish of dishes"(click)="dishDetail($event, dish)">
+    <img src="{{'http://localhost:3000/'+ dish.image}}" alt="{{dish.name}}" />
     <ion-card-content>
       <ion-card-title>
         {{dish.name | uppercase}}
