--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -20,7 +20,7 @@
 
 
 	<ion-card *ngFor="let dish of dishes"(click)="dishDetail($event, dish)">
-    <img src="{{'http://localhost:3000/'+ dish.image}}" alt="{{dish.name}}" />
+    <img src="{{'http://localhost:3000/'+ dish.image}}"  />
     <ion-card-content>
       <ion-card-title>
         {{dish.name | uppercase}}
