--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,14 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar transparent>
     <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
+      <ion-icon color="light" name="menu"></ion-icon>
     </button>
-    <ion-title>Inicio</ion-title>
+    <ion-title text-center><span ion-text color="light">Inicio</span></ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
-  <h3>Las mejores pizzas de GDL</h3>
+  <h3 text-center><span ion-text color="light">Las mejores pizzas de GDL</span></h3>
   <ion-card *ngIf="dish">
     <img src="{{'http://localhost:3000/'+ dish.image}}" />
     <ion-card-content>
