--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -16,6 +16,26 @@
 
   </ion-navbar>
 
+  <ion-card>
+
+
+<img src="../../assets/imgs/Map.PNG">
+    <ion-fab right top>
+      <button ion-fab>
+        <ion-icon name="pin"></ion-icon>
+      </button>
+    </ion-fab>
+  
+    <ion-item>
+      <ion-icon name="pizzas" item-start large></ion-icon>
+      <h2>Pizzas Dunne</h2>
+      <p>Av. La Paz #234, Col. La Fayette, Guadalajara, Jal.</p>
+      <p>Tel. 3325-1893</p>
+    </ion-item>
+
+  </ion-card>
+  
+
 </ion-header>
 
 
