--- a/src/pages/dishdetail/dishdetail.html
+++ b/src/pages/dishdetail/dishdetail.html
@@ -33,7 +33,7 @@
   		<h2>Commnets</h2>
   	</ion-list-header>
   	<ion-item *ngFor="let comment of dish.comments" color="background_color">
-    {{comment.author}}-{{comment.date}}
+    {{comment.author}}
     <h4>{{comment.comment}}</h4>
   	</ion-item>
   </ion-list>
