--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content>
-  <h3 text-center><span ion-text color="light">Las mejores pizzas de GDL</span></h3>
+  <h3 text-center><span ion-text color="light">Pizza Dunne</span></h3>
   <ion-card *ngIf="dish">
     <img src="{{'http://localhost:3000/'+ dish.image}}" />
     <ion-card-content>
